[package]
name = "granne_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
granne = "0.5.2"
tempfile = "3.2.0"
rand = "0.8.4"
rayon = "1.5.1"
num_cpus = "1"
tokio = { version = "1", features = ["full"] }