[package]
name = "granne_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
granne = "0.5"
rand = "0.8"
rayon = "1.5"
num_cpus = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
log = "0.4"
tempfile = "3"
fslock = "0.2"

[dev-dependencies]
env_logger = "0.9.0"